--- a/public/app/add-movie/add-movie.html
+++ b/public/app/add-movie/add-movie.html
@@ -19,8 +19,8 @@
             </select>
         </fieldset>
         <fieldset>
-            <label for="plot">4. Write description:</label>
-            <textarea id="plot" placeholder="Write something.." ng-model="addForm.plot"></textarea>
+            <label>4. Write description:</label>
+            <textarea placeholder="Write something.." ng-model="addForm.plot"></textarea>
         </fieldset>
         <fieldset ng-class="{'disable': !checked}">
             <label><input type="checkbox" ng-model="checked" />I are agree with terms and conditions</label>
