--- a/public/app/web-app/movie-info/movie-info.html
+++ b/public/app/web-app/movie-info/movie-info.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="content">
         <div class="search-row">
-            <div class="breadcrumbs"><ui-breadcrumbs displayname-property="data.displayName"></ui-breadcrumbs></div>
+            <div class="breadcrumbs"><a ui-sref="store({type: '{{movie.data.Type}}', genre: 'all'})" ng-bind="movie.data.Type | uppercase"></a> / <span ng-bind="movie.data.Title"></span></div>
             <div class="search">
                 <form ng-submit="movie.Search(searchPhrase)">
                     <input type="text" ng-model="searchPhrase" placeholder="Search movie">
