--- a/public/app/web-app/movie-info/movie-info.html
+++ b/public/app/web-app/movie-info/movie-info.html
@@ -12,8 +12,8 @@
             <div><p><img ng-src="{{movie.data.Poster}}"></p></div>
             <div><h1 ng-bind="movie.data.Title"></h1></div>
             <div ng-if="isAuthenticated">
-                <button ng-if="!movie.isMovieInWatchlist()" ng-click="movie.addMovieToWatchList()">Add</button>
-                <button ng-if="movie.isMovieInWatchlist()" ng-click="movie.removeMovieFromWatchList()">Remove</button>
+                <button ng-if="!movie.ismovieinwatchlist" ng-click="movie.addMovieToWatchList()">Add</button>
+                <button ng-if="movie.ismovieinwatchlist" ng-click="movie.removeMovieFromWatchList()">Remove</button>
             </div>
         </div>
     </div>
