Add adaptive style

--- a/public/app/web-app/web-app.html
+++ b/public/app/web-app/web-app.html
@@ -1,6 +1,6 @@
 <div class="movie-container">
-    <input type="checkbox" id="filter" class="hidden-menu-ticker">
-    <label class="btn-menu" for="filter">
+    <input type="checkbox" id="filter" class="hidden-filter-ticker">
+    <label class="filter-btn-menu" for="filter">
         <span class="first-span"></span>
         <span class="second-span"></span>
         <span class="third-span"></span>
