--- a/public/app/index.html
+++ b/public/app/index.html
@@ -22,6 +22,12 @@
         <header class="header" ng-class="{'header-fixed': root.page()}">
             <div class="header-logo"><a ui-sref="home"><img src="/assets/img/logo.png" alt="Movie Store"></a></div>
             <nav>
+                <input type="checkbox" id="menu" class="hidden-menu-ticker">
+                <label class="btn-menu" for="menu">
+                    <span class="first-span"></span>
+                    <span class="second-span"></span>
+                    <span class="third-span"></span>
+                </label>
                 <ul class="header-menu">
                     <li class="header-menu_item item_movie">
                         <a ui-sref-active="active" ui-sref="store({type: 'movie', genre: 'all'})">Movies</a>
