Add adaptive style

--- a/public/app/search/search.html
+++ b/public/app/search/search.html
@@ -1,5 +1,5 @@
 <div class="search-container">
-    <div>
+    <div class="search-form">
         <form ng-submit="search.Find(searchPhrase)">
             <label>Find what you want:</label>
             <input class="search-input" type="text" ng-model="searchPhrase" placeholder="Search movie">
