--- a/public/app/web-app/web-app.html
+++ b/public/app/web-app/web-app.html
@@ -85,7 +85,7 @@
         </div>
         <div class="pagination" ng-if="movie.totalpages > 1">
             <button ng-disabled="movie.curentpage == 1" ng-click="movie.paginate(movie.curentpage = movie.curentpage -1)">&laquo; Previous</button>
-            <p>{{movie.curentpage}} from {{movie.totalpages}}</p>
+            <p>{{movie.curentpage}} off {{movie.totalpages}}</p>
             <button ng-disabled="movie.curentpage == movie.totalpages" ng-click="movie.paginate(movie.curentpage = movie.curentpage +1)">Next &raquo;</button>
         </div>
     </div>
