--- a/public/app/index.html
+++ b/public/app/index.html
@@ -7,6 +7,7 @@
     <title>Movie Store</title>
     <base href="/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet" href="/assets/css/main-style.css">
     <link rel="stylesheet" href="/app/main/home.css">
     <link rel="stylesheet" href="/app/web-app/web-app-style.css">
@@ -154,6 +155,7 @@
     <script src="/assets/js/angular.js"></script>
     <script src="/assets/js/angular-ui-router.min.js"></script>
     <script src="/assets/js/angular-jwt.js"></script>
+    <script src="/assets/js/angular-socialshare.js"></script>
     <script src="/app/app.js"></script>
     <script src="/app/app.run.js"></script>
     <script src="/app/app.routes.js"></script>
