--- a/public/app/main/home.html
+++ b/public/app/main/home.html
@@ -8,7 +8,7 @@
             <div class="elem_position slide_comments">21</div>
             <div class="elem_position slide_like">2,548</div>
         </div>
-        <button class="watch_now">Watch now</button>
+        <button class="watch_now" ui-sref="movie({ movie_id: '58cfec43f36d281bf61716d5' })">Watch now</button>
     </div>
     <div class="slide fade">
         <img src="../assets/img/slider/slide2.jpg" alt="">
@@ -19,7 +19,7 @@
             <div class="elem_position slide_comments">14</div>
             <div class="elem_position slide_like">7,364</div>
         </div>
-        <button class="watch_now">Watch now</button>
+        <button class="watch_now" ui-sref="movie({ movie_id: '5a708dcb734d1d71dd521baa' })">Watch now</button>
     </div>
     <div class="slide fade">
         <img src="../assets/img/slider/slide3.jpg" alt="">
@@ -30,7 +30,7 @@
             <div class="elem_position slide_comments">14</div>
             <div class="elem_position slide_like">7,364</div>
         </div>
-        <button class="watch_now">Watch now</button>
+        <button class="watch_now" ui-sref="movie({ movie_id: '5a708a54734d1d71dd52184f' })">Watch now</button>
     </div>
     <a class="prev" ng-click="main.plusSlides(-1)">&#10094;</a>
     <a class="next" ng-click="main.plusSlides(1)">&#10095;</a>
