--- a/public/app/web-app/web-app.html
+++ b/public/app/web-app/web-app.html
@@ -13,6 +13,7 @@
                     <input class="input-tab" id="tab-one" type="radio" name="tabs">
                     <label class="label-tab" for="tab-one">Year</label>
                     <div class="tab-content">
+                        <label class="filter-subitem"><input type="radio" ng-model="filterForm.year" value="2018">2018</label>
                         <label class="filter-subitem"><input type="radio" ng-model="filterForm.year" value="2017">2017</label>
                         <label class="filter-subitem"><input type="radio" ng-model="filterForm.year" value="2016">2016</label>
                         <label class="filter-subitem"><input type="radio" ng-model="filterForm.year" value="2015">2015</label>
